# crawler-xbox

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
crawler/: __main__.py  executor.py  settings.py
crawler/items/: game.py
crawler/models/: __init__.py  all_games.py  game.py  games.py  home.py  response_model.py
crawler/pipelines/: game.py
crawler/sitemap/: __init__.py  dataclasses.py  sitemap.toml
crawler/spiders/: __init__.py  product.py
