[tool.poetry]
name = "scrapytemplate"
version = "0.1.0"
description = "Template Repository for Scrapy Crawler Projects"
authors = ["JPBeckner <pedrobeckner@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "2.5"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
